Lab 6 - Group C - updated

--- a/labs/6/c/config.json
+++ b/labs/6/c/config.json
@@ -1,7 +1,7 @@
 {
 	"host" : "localhost",
 	"db" : "dairy",
-	"uname" : "root",
-	"pwd" : "",
+	"username" : "dairy",
+	"password" : "dairy123",
 	"port" : "3306"
 }
